@@ -1,3 +1,8 @@
+Mon Oct 11 14:03:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* error.c (syserr_initialize): set the encoding of Errno::*#message
+	  as locale. [ruby-dev:42358]
+
 Mon Oct 11 06:11:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* io.c (rb_io_set_encoding): use rb_funcall2 when the io is not
